# tinytrainlog

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/tinytrainlog/: __init__.py  _names.py  metrics_logger.py
tests/: test_metrics_logger.py
