[project]
name = "tinytrainlog"
version = "0.1.0"
description = "Tiny train logger"
readme = "README.md"
authors = [
    { name = "jdh", email = "you@example.com" }
]
keywords = ["pytorch", "metrics", "logging", "training", "machine-learning"]
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/jdhouseholder/tinytrainlog"
